--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: go
+install:
+  - go get github.com/gorilla/mux
 script: go get github.com/tektoh/imageserver && go test
 notifications:
   email: false
