--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: go
-install:
-  - go get github.com/gorilla/mux
-script: go get github.com/tektoh/imageserver && go test
-notifications:
-  email: false
+go:
+  - tip
+before_install:
+  - go get github.com/mattn/gom
+script:
+  - $HOME/gopath/bin/gom install
+  - $HOME/gopath/bin/gom test
